<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>elastic-memory</name>
    <modules>
        <module>hazelcast-ee-core</module>
        <module>hazelcast-ee-sessions</module>
        <module>hazelcast-ee-mancenter</module>
        <module>hazelcast-oss</module>
    </modules>
    <groupId>com.hazelcast</groupId>
    <artifactId>elastic-memory</artifactId>
    <packaging>pom</packaging>
    <version>3.3-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>1.6</jdk.version>
        <target.dir>target</target.dir>
        <maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
    </properties>

    <licenses>
        <license>
            <name>Commercial License</name>
            <url>http://www.hazelcast.com/licenses/LICENSE.txt</url>
            <distribution>manual</distribution>
        </license>
    </licenses>

    <organization>
        <name>Hazelcast, Inc.</name>
        <url>http://www.hazelcast.com/</url>
    </organization>


    <repositories>
       <repository>
           <id>snapshot-repository</id>
           <name>Maven2 Snapshot Repository</name>
           <url>https://oss.sonatype.org/content/repositories/snapshots</url>
       </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven.assembly.plugin.version}</version>
                <configuration>
                    <finalName>hazelcast-${project.version}</finalName>
                    <descriptors>
                        <descriptor>./src/main/assembly/assembly-ee.xml</descriptor>
                        <descriptor>./src/main/assembly/assembly-oss.xml</descriptor>
                    </descriptors>
                    <appendAssemblyId>true</appendAssemblyId>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <compress>true</compress>
                        <!-- Not needed for now -->
                        <!-- manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile -->
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.11</version>
                <configuration>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>

                    <argLine>-Xms128m -Xmx512m -XX:MaxPermSize=128M
                        -Dhazelcast.version.check.enabled=false
                        -Dhazelcast.mancenter.enabled=false
                        -Dhazelcast.elastic.memory.enabled=true
                        -Dhazelcast.elastic.memory.total.size=128m
                        -Dhazelcast.elastic.memory.chunk.size=1k
                    </argLine>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <scm>
        <developerConnection>scm:git:git@github.com:hazelcast/elastic-memory.git</developerConnection>
    </scm>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.12</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>

    </dependencies>
</project>
